# smart-home-ros-pkg

./: README.md
arduino_entry_detector/arduino_PIR/: arduino_PIR.ino
easy_entry_light/: CMakeLists.txt  package.xml
easy_entry_light/src/: easy_entry_light.cpp
home_command_manager/: .cproject  .project  CMakeLists.txt  README.md  package.xml
home_command_manager/cfg/: home_command_manager.cfg
home_command_manager/common/src/: home_command_manager_common.cpp
home_command_manager/launch/: home_command_manager.launch
home_command_manager/model/: home_command_manager.ros_package  home_command_manager.ros_package_diagram
home_command_manager/ros/src/: home_command_manager_ros.cpp
home_urdf_model/: CMakeLists.txt  package.xml
home_urdf_model/map/: home_mix.yaml  map.yaml
smart_home_launchfiles/: CMakeLists.txt  package.xml
smart_home_launchfiles/launch/: entry.launch  forecast.launch  home.launch  radio.launch
smart_home_status/: CMakeLists.txt  package.xml  setup.py
smart_home_status/nodes/: smach_home_status.py
speech_analysis/: CMakeLists.txt  package.xml  setup.py
speech_analysis/scripts/: speech_analyzer.py
