<?xml version="1.0"?>
<package>
  <name>home_command_manager</name>
  <description>The home_command_manager package</description>
  <version>0.1.0</version>
  <maintainer email="kriegel.joffrey@gmail.com">Joffrey Kriegel</maintainer>
  <author email="kriegel.joffrey@gmail.com">Joffrey Kriegel</author>
  <license>GPLv3</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- bride default dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- user dependencies -->
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->

</package>
